Fixed text alignment at smaller viewports

--- a/Resources/css/queries.css
+++ b/Resources/css/queries.css
@@ -35,15 +35,12 @@
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
 	
-	section {
-		text-align: center;
-	}
-
-    .main-nav li {
-        padding-bottom: 40px;
-    }
-	
      #cvBar, #linkedInBar {
         display: none;
     }
+         
+    #typeOutBar, #nameBar {
+        text-align: center;
+    }
+    
 }
